# ollama-watchdog

./: .autoenv.zsh  .flake8  .gitignore  .models  .venv  README.md  main.py  playground.py  pyproject.toml  tail.py  tail_output  test.py
libs/: file_include.py  http_include.py  web_search.py
src/: chat.py  chatter.py  cli.py  constants.py  echo.py  file_change_event.py  formatter.py  llm_query.py  logger.py  main.py  messages.py  printer.py  processor.py  prompt_processor.py  pub_sub_orchestrator.py  recorder.py  sql_alchemy_conf.py  summarizer.py  tail.py  watch_dog.old.py  watch_dog.py  watch_handler.py  watcher.py
src/chains/: mute_processing.py
src/libs/: ask_webllm.py  bash_run.py  file_include.py  http_include.py  remove_comments.py  rich_logger.py
src/models/: chat_history.py  chat_summary.py  literals_types_constants.py  message_event.py  publish_subscribe_class.py  subscriber.py
src/prompt_templates/: chat.jinja  chat_examples.md  summarize.jinja  userinfo.txt
systemd/: ollama-watchdog.service
tests/: conftest.py  test_chatter.py  test_printer.py  test_prompt_processor.py  test_pub_sub_orchestrator.py  test_recorder.py  test_summarizer.py  test_watcher.py
tests/chains/: test_mute_processing.py
tests/libs/: test_ask_webllm.py  test_bash_run.py  test_file_include.py  test_http_include.py  test_remove_comments.py  test_rich_logger.py  test_web_search.py
